src/objects/Alternate_Id_GLBL__c.object
<CustomObject>
    <description>Stores Alternate ID&apos;s for Accounts. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
    <fields>
        <fullName>Account_GLBL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship from Alternate ID to Account. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alternate ID&apos;s</relationshipLabel>
        <relationshipName>Alternate_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Altrnt_Id_Sts_Cd_GLBL__c</fullName>
        <description>Status
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altrnt_Id_Subtyp_Cd_GLBL__c</fullName>
        <description>Subtype Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Subtype Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altrnt_Id_Typ_Cd_GLBL__c</fullName>
        <description>Type Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Date_GLBL__c</fullName>
        <description>Delete Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Del_Flg_GLBL__c</fullName>
        <description>Delete Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Delete Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efctv_End_Dt_GLBL__c</fullName>
        <description>End Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Efctv_Start_Dt_GLBL__c</fullName>
        <description>Effective Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exprtn_Dt_GLBL__c</fullName>
        <description>Expiration Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Tmstmp_GLBL__c</fullName>
        <description>Source Load Timestamp
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Source Load Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Usr_GLBL__c</fullName>
        <description>ODS Load User
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>ODS Load User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Tmstmp_GLBL__c</fullName>
        <description>Source Update Timestamp
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Source Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Usr_GLBL__c</fullName>
        <description>ODS Last Update User
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>ODS Last Update User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Cntry_Cd_GLBL__c</fullName>
        <description>Party Country Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Party Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Rcrd_Typ_Cd_GLBL__c</fullName>
        <description>Type of Alternate ID associated to Account. Created 10/17/2013 by KLorenti, Mavens Consulting

Party Record Type Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Party Record Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Rank_Nbr_GLBL__c</fullName>
        <description>Priority Rank Number
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Priority Rank Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Src_Block_Flg_GLBL__c</fullName>
        <description>Source Block Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Source Block Flag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Sys_Cd_GLBL__c</fullName>
        <description>Source System Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Source System Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Alternate ID</label>
    <nameField>
        <label>Alternate ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alternate ID&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>